# sdl-plusplus

./: .travis.yml  CMakeLists.txt  README.md
examples/: opengl.cpp  window.cpp
include/sdl/: event  graphic_context  init  renderer  sdl  window
src/: events.cpp  init.cpp  renderer.cpp  video.cpp  window.cpp
